<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Linear_Relaty"
    tools:context="com.example.ls.shoppingmall.user.activity.LoginActivity">

    <com.example.ls.shoppingmall.utils.layoututils.OverScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background">

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center"
                android:background="@drawable/login_iv_top"
                android:layout_width="@dimen/x55"
                android:layout_height="@dimen/x80"
                android:layout_marginTop="@dimen/x18"
                android:layout_marginBottom="@dimen/x10"
                android:gravity="center"
                android:textColor="#fb7675"
                android:textSize="@dimen/x35" />

            <LinearLayout style="@style/Login_sytle_lineayout">

                <ImageView
                    style="@style/Login_image"
                    android:src="@drawable/user_login_phone" />

                <View style="@style/Login_view" />

                <EditText
                    android:id="@+id/ac_login_phone"
                    style="@style/Login_Editer_phone"
                    android:hint="@string/Registered_inputphone_hint" />

                <Button
                    android:id="@+id/login_delet_phone_bt"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_marginRight="@dimen/x25"
                    android:background="@drawable/delete"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout style="@style/Login_sytle_lineayout">

                <ImageView
                    style="@style/Login_image"
                    android:src="@drawable/user_login_clock" />

                <View style="@style/Login_view" />

                <EditText
                    android:id="@+id/ac_login_password"
                    style="@style/Login_Editer"
                    android:hint="@string/Login_password_hint" />

                <Button
                    android:id="@+id/login_delet_password_bt"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_marginRight="@dimen/x25"
                    android:background="@drawable/delete"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/ac_login_login"
                style="@style/login_style_text"
                android:background="@drawable/selected_red_shapter_ager"
                android:gravity="center"
                android:text="@string/Login" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/x1"
                android:layout_marginLeft="@dimen/x25"
                android:layout_marginRight="@dimen/x25"
                android:layout_marginTop="@dimen/x15"
                android:background="#dcdcdc" />
            <TextView
                android:id="@+id/tv_get_password"
                android:textSize="14sp"
                app:layout_marginLeftPercent="70%"
                android:layout_marginTop="@dimen/x10"
                android:textColor="@color/base_text_red"
                android:text="忘记密码？"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <com.zhy.android.percent.support.PercentRelativeLayout
                style="@style/Linear_Relaty"
                android:layout_weight="1"
                android:gravity="bottom"
                android:paddingBottom="@dimen/x10">

                <TextView
                    android:id="@+id/ac_login_register"
                    style="@style/login_style_text"
                    android:background="@drawable/selected_blue_shapter_ager"
                    android:text="@string/Registered" />

                <TextView
                    android:id="@+id/ac_login_see"
                    style="@style/login_style_text"
                    android:layout_below="@+id/ac_login_register"
                    android:background="@drawable/selected_gray_shapter_ager"
                    android:text="@string/See_ok" />
            </com.zhy.android.percent.support.PercentRelativeLayout>
        </com.zhy.android.percent.support.PercentLinearLayout>
    </com.example.ls.shoppingmall.utils.layoututils.OverScrollView>
</LinearLayout>
