<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/user_information_dialog_bg"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tvUpLoadTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/personal_update_photo_title"
            android:textColor="@color/white"
            android:textSize="@dimen/x14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/txt_green" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/tvPhotograph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_click_btn"
            android:padding="10dp"
            android:text="@string/personal_update_photo_photograph"
            android:textColor="#000000"
            android:textSize="@dimen/x14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/takephoto_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/tvAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_click_btn"
            android:padding="10dp"
            android:text="@string/personal_update_photo_gallery"
            android:textColor="#000000"
            android:textSize="@dimen/x14"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:paddingBottom="10dp"
        android:background="@color/takephoto_line" />

</LinearLayout>