<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/x2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x54"
                android:gravity="center_vertical">
                <TextView
                    android:paddingEnd="@dimen/x10"
                    android:paddingStart="@dimen/x10"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:gravity="center_vertical"
                    android:layout_centerVertical="true"
                    android:id="@+id/tv_search_home"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x30"
                    android:layout_marginLeft="@dimen/x25"
                    android:layout_marginRight="@dimen/x25"
                    android:background="@drawable/search_home_shape"
                    android:drawableLeft="@drawable/search_seacher_iv"
                    android:drawablePadding="5dp"
                    android:textColor="#999999"
                    android:padding="5dp"
                    android:hint="请输入你的疾病"
                    android:textColorHint="@color/color_b7b8bd"
                    android:textSize="@dimen/x13" />
                <TextView
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/x10"
                    android:id="@+id/medical_search_tv"
                    android:layout_marginRight="@dimen/x20"
                    android:gravity="center_vertical"
                    android:layout_alignParentRight="true"
                    android:text="搜索"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>


            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x20"
                android:orientation="horizontal">

                <TextView
                    style="@style/medicals_style_tv"
                    android:drawableTop="@drawable/comment_header_family_iv"
                    android:text="@string/inqury_familay" />

                <TextView
                    android:id="@+id/ft_comm_phone_tv"
                    style="@style/medicals_style_tv"
                    android:drawableTop="@drawable/inqury_phone"
                    android:text="@string/inqury_phone"
                    android:visibility="gone" />
                <!--兼容-->
                <TextView
                    android:id="@+id/ft_comm_winxing_tv"
                    style="@style/medicals_style_tv"
                    android:drawableTop="@drawable/comment_header_zhuanjia_iv"
                    android:text="@string/inqury_familydoctor" />


                <TextView
                    android:id="@+id/ft_comm_map_tv"
                    style="@style/medicals_style_tv"
                    android:drawableTop="@drawable/inqury_medical_map"
                    android:text="@string/inqury_medical_map" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_header">

        <com.example.ls.shoppingmall.community.utis.CompatListView
            android:id="@+id/ft_comm_ry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:scrollbars="none" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>