<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ls.shoppingmall.community.activity.SetPassword">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/header_top"
            layout="@layout/myinformation_header_include" />

        <LinearLayout style="@style/Login_sytle_lineayout">

            <ImageView
                style="@style/Login_image"
                android:src="@drawable/user_login_phone" />

            <View style="@style/Login_view" />

            <EditText
                android:id="@+id/regist_phone_et"
                style="@style/Register_Editer"
                android:layout_width="wrap_content"
                android:hint="@string/Registered_inputphone_hint" />

            <Button
                android:id="@+id/regest_delet_phone_bt"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginRight="@dimen/x25"
                android:background="@drawable/delete"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout style="@style/Login_sytle_lineayout">

            <ImageView
                style="@style/Login_image"
                android:src="@drawable/login_yanzma" />

            <View style="@style/Login_view" />

            <EditText
                android:id="@+id/regist_messge_et"
                style="@style/Register_Editer"
                android:layout_width="wrap_content"
                android:hint="请输入验证码" />

            <TextView
                android:id="@+id/regist_send_messge_tv"
                style="@style/register_style_text_time" />
        </LinearLayout>

        <LinearLayout style="@style/Login_sytle_lineayout">

            <ImageView
                style="@style/Login_image"
                android:src="@drawable/user_login_clock" />

            <View style="@style/Login_view" />

            <EditText
                android:id="@+id/regist_input_password_et"
                style="@style/Login_Editer"
                android:layout_width="wrap_content"
                android:hint="@string/Login_newpassword_hint" />

            <Button
                android:id="@+id/regest_delet_password_bt"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_marginRight="@dimen/x25"
                android:background="@drawable/delete"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/x20"
        android:id="@+id/zhuce_textview"
        style="@style/login_style_text"
        android:layout_marginTop="@dimen/x5"
        android:background="@drawable/selected_red_shapter_ager"
        android:text="@string/sure" />

</RelativeLayout>
